// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expense list with expenses 1`] = `
<div
  className="container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-larger"
    >
      Expense
    </div>
    <div
      className="show-for-larger"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={195}
      createdAt={0}
      description="Gum"
      id="1"
      note=""
    />
    <ExpenseListItem
      amount={109500}
      createdAt={-345600000}
      description="Rent"
      id="2"
      note=""
    />
    <ExpenseListItem
      amount={4500}
      createdAt={345600000}
      description="Credit Card"
      id="3"
      note=""
    />
  </div>
</div>
`;

exports[`should render expenselist with empty message 1`] = `
<div
  className="container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-larger"
    >
      Expense
    </div>
    <div
      className="show-for-larger"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  />
</div>
`;
